# My-What-sApp-Agent

./: README.md  pyproject.toml
src/: .env  PyWhatKit_DB.txt  agent.py  agent_cli.py  agent_ui.py  config.py  contacts.csv  load_contacts_csv.py  test_contact_matching.py
src/whats_app_agent/: __init__.py
